<!--
  ~ Copyright (c) 2021 Samson Achiaga
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">School Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="courses">Courses</string>
    <string name="units">Units</string>
    <string name="marks">Marks</string>
    <string name="note_title">Note title (required)</string>
    <string name="note_content">Type your note content here</string>
    <string name="save">Save</string>
    <string name="delete_all_todos">Delete all to-dos</string>
    <string name="delete_all_completed_todos">Delete all completed to-dos</string>

    <string-array name="courses">
        <item>"Select course"</item>
        <item>"No course"</item>
    </string-array>
</resources>